Specified the use of the c++11 standard in the makefile for compute.cs compatibility

--- a/programming_assignment_1/Makefile
+++ b/programming_assignment_1/Makefile
@@ -1,11 +1,11 @@
 output: main.o BlockStack.o
-	g++ -std=c++17 main.o BlockStack.o -o blocksworld
+	g++ -std=c++11 main.o BlockStack.o -o blocksworld
 
 main.o: main.cpp
-	g++ -c main.cpp
+	g++ -std=c++11 -c main.cpp
 
 BlockStack.o: BlockStack.cpp
-	g++ -c BlockStack.cpp
+	g++ -std=c++11 -c BlockStack.cpp
 
 clean:
 	rm *.o blocksworld
