Renamed main.cpp to blocksworld.cpp to be consistent with instruction requirements

--- a/programming_assignment_1/Makefile
+++ b/programming_assignment_1/Makefile
@@ -1,8 +1,8 @@
-output: main.o BlockStack.o
-	g++ -std=c++11 main.o BlockStack.o -o blocksworld
+output: blocksworld.o BlockStack.o
+	g++ -std=c++11 blocksworld.o BlockStack.o -o blocksworld
 
-main.o: main.cpp
-	g++ -std=c++11 -c main.cpp
+blocksworld.o: blocksworld.cpp
+	g++ -std=c++11 -c blocksworld.cpp
 
 BlockStack.o: BlockStack.cpp
 	g++ -std=c++11 -c BlockStack.cpp
