--- a/programming_assignment_2/CNFs/4queens.cnf
+++ b/programming_assignment_2/CNFs/4queens.cnf
@@ -1,608 +1,608 @@
-# (implies Q11 (not Q21))
+# (-> Q11 (not Q21))
 
 -Q11 -Q21
 
-# (implies Q11 (not Q31))
+# (-> Q11 (not Q31))
 
 -Q11 -Q31
 
-# (implies Q11 (not Q41))
+# (-> Q11 (not Q41))
 
 -Q11 -Q41
 
-# (implies Q12 (not Q22))
+# (-> Q12 (not Q22))
 
 -Q12 -Q22
 
-# (implies Q12 (not Q32))
+# (-> Q12 (not Q32))
 
 -Q12 -Q32
 
-# (implies Q12 (not Q42))
+# (-> Q12 (not Q42))
 
 -Q12 -Q42
 
-# (implies Q13 (not Q23))
+# (-> Q13 (not Q23))
 
 -Q13 -Q23
 
-# (implies Q13 (not Q33))
+# (-> Q13 (not Q33))
 
 -Q13 -Q33
 
-# (implies Q13 (not Q43))
+# (-> Q13 (not Q43))
 
 -Q13 -Q43
 
-# (implies Q14 (not Q24))
+# (-> Q14 (not Q24))
 
 -Q14 -Q24
 
-# (implies Q14 (not Q34))
+# (-> Q14 (not Q34))
 
 -Q14 -Q34
 
-# (implies Q14 (not Q44))
+# (-> Q14 (not Q44))
 
 -Q14 -Q44
 
-# (implies Q21 (not Q11))
+# (-> Q21 (not Q11))
 
 -Q21 -Q11
 
-# (implies Q21 (not Q31))
+# (-> Q21 (not Q31))
 
 -Q21 -Q31
 
-# (implies Q21 (not Q41))
+# (-> Q21 (not Q41))
 
 -Q21 -Q41
 
-# (implies Q22 (not Q12))
+# (-> Q22 (not Q12))
 
 -Q22 -Q12
 
-# (implies Q22 (not Q32))
+# (-> Q22 (not Q32))
 
 -Q22 -Q32
 
-# (implies Q22 (not Q42))
+# (-> Q22 (not Q42))
 
 -Q22 -Q42
 
-# (implies Q23 (not Q13))
+# (-> Q23 (not Q13))
 
 -Q23 -Q13
 
-# (implies Q23 (not Q33))
+# (-> Q23 (not Q33))
 
 -Q23 -Q33
 
-# (implies Q23 (not Q43))
+# (-> Q23 (not Q43))
 
 -Q23 -Q43
 
-# (implies Q24 (not Q14))
+# (-> Q24 (not Q14))
 
 -Q24 -Q14
 
-# (implies Q24 (not Q34))
+# (-> Q24 (not Q34))
 
 -Q24 -Q34
 
-# (implies Q24 (not Q44))
+# (-> Q24 (not Q44))
 
 -Q24 -Q44
 
-# (implies Q31 (not Q11))
+# (-> Q31 (not Q11))
 
 -Q31 -Q11
 
-# (implies Q31 (not Q21))
+# (-> Q31 (not Q21))
 
 -Q31 -Q21
 
-# (implies Q31 (not Q41))
+# (-> Q31 (not Q41))
 
 -Q31 -Q41
 
-# (implies Q32 (not Q12))
+# (-> Q32 (not Q12))
 
 -Q32 -Q12
 
-# (implies Q32 (not Q22))
+# (-> Q32 (not Q22))
 
 -Q32 -Q22
 
-# (implies Q32 (not Q42))
+# (-> Q32 (not Q42))
 
 -Q32 -Q42
 
-# (implies Q33 (not Q13))
+# (-> Q33 (not Q13))
 
 -Q33 -Q13
 
-# (implies Q33 (not Q23))
+# (-> Q33 (not Q23))
 
 -Q33 -Q23
 
-# (implies Q33 (not Q43))
+# (-> Q33 (not Q43))
 
 -Q33 -Q43
 
-# (implies Q34 (not Q14))
+# (-> Q34 (not Q14))
 
 -Q34 -Q14
 
-# (implies Q34 (not Q24))
+# (-> Q34 (not Q24))
 
 -Q34 -Q24
 
-# (implies Q34 (not Q44))
+# (-> Q34 (not Q44))
 
 -Q34 -Q44
 
-# (implies Q41 (not Q11))
+# (-> Q41 (not Q11))
 
 -Q41 -Q11
 
-# (implies Q41 (not Q21))
+# (-> Q41 (not Q21))
 
 -Q41 -Q21
 
-# (implies Q41 (not Q31))
+# (-> Q41 (not Q31))
 
 -Q41 -Q31
 
-# (implies Q42 (not Q12))
+# (-> Q42 (not Q12))
 
 -Q42 -Q12
 
-# (implies Q42 (not Q22))
+# (-> Q42 (not Q22))
 
 -Q42 -Q22
 
-# (implies Q42 (not Q32))
+# (-> Q42 (not Q32))
 
 -Q42 -Q32
 
-# (implies Q43 (not Q13))
+# (-> Q43 (not Q13))
 
 -Q43 -Q13
 
-# (implies Q43 (not Q23))
+# (-> Q43 (not Q23))
 
 -Q43 -Q23
 
-# (implies Q43 (not Q33))
+# (-> Q43 (not Q33))
 
 -Q43 -Q33
 
-# (implies Q44 (not Q14))
+# (-> Q44 (not Q14))
 
 -Q44 -Q14
 
-# (implies Q44 (not Q24))
+# (-> Q44 (not Q24))
 
 -Q44 -Q24
 
-# (implies Q44 (not Q34))
+# (-> Q44 (not Q34))
 
 -Q44 -Q34
 
-# (implies Q11 (not Q12))
+# (-> Q11 (not Q12))
 
 -Q11 -Q12
 
-# (implies Q11 (not Q13))
+# (-> Q11 (not Q13))
 
 -Q11 -Q13
 
-# (implies Q11 (not Q14))
+# (-> Q11 (not Q14))
 
 -Q11 -Q14
 
-# (implies Q12 (not Q11))
+# (-> Q12 (not Q11))
 
 -Q12 -Q11
 
-# (implies Q12 (not Q13))
+# (-> Q12 (not Q13))
 
 -Q12 -Q13
 
-# (implies Q12 (not Q14))
+# (-> Q12 (not Q14))
 
 -Q12 -Q14
 
-# (implies Q13 (not Q11))
+# (-> Q13 (not Q11))
 
 -Q13 -Q11
 
-# (implies Q13 (not Q12))
+# (-> Q13 (not Q12))
 
 -Q13 -Q12
 
-# (implies Q13 (not Q14))
+# (-> Q13 (not Q14))
 
 -Q13 -Q14
 
-# (implies Q14 (not Q11))
+# (-> Q14 (not Q11))
 
 -Q14 -Q11
 
-# (implies Q14 (not Q12))
+# (-> Q14 (not Q12))
 
 -Q14 -Q12
 
-# (implies Q14 (not Q13))
+# (-> Q14 (not Q13))
 
 -Q14 -Q13
 
-# (implies Q21 (not Q22))
+# (-> Q21 (not Q22))
 
 -Q21 -Q22
 
-# (implies Q21 (not Q23))
+# (-> Q21 (not Q23))
 
 -Q21 -Q23
 
-# (implies Q21 (not Q24))
+# (-> Q21 (not Q24))
 
 -Q21 -Q24
 
-# (implies Q22 (not Q21))
+# (-> Q22 (not Q21))
 
 -Q22 -Q21
 
-# (implies Q22 (not Q23))
+# (-> Q22 (not Q23))
 
 -Q22 -Q23
 
-# (implies Q22 (not Q24))
+# (-> Q22 (not Q24))
 
 -Q22 -Q24
 
-# (implies Q23 (not Q21))
+# (-> Q23 (not Q21))
 
 -Q23 -Q21
 
-# (implies Q23 (not Q22))
+# (-> Q23 (not Q22))
 
 -Q23 -Q22
 
-# (implies Q23 (not Q24))
+# (-> Q23 (not Q24))
 
 -Q23 -Q24
 
-# (implies Q24 (not Q21))
+# (-> Q24 (not Q21))
 
 -Q24 -Q21
 
-# (implies Q24 (not Q22))
+# (-> Q24 (not Q22))
 
 -Q24 -Q22
 
-# (implies Q24 (not Q23))
+# (-> Q24 (not Q23))
 
 -Q24 -Q23
 
-# (implies Q31 (not Q32))
+# (-> Q31 (not Q32))
 
 -Q31 -Q32
 
-# (implies Q31 (not Q33))
+# (-> Q31 (not Q33))
 
 -Q31 -Q33
 
-# (implies Q31 (not Q34))
+# (-> Q31 (not Q34))
 
 -Q31 -Q34
 
-# (implies Q32 (not Q31))
+# (-> Q32 (not Q31))
 
 -Q32 -Q31
 
-# (implies Q32 (not Q33))
+# (-> Q32 (not Q33))
 
 -Q32 -Q33
 
-# (implies Q32 (not Q34))
+# (-> Q32 (not Q34))
 
 -Q32 -Q34
 
-# (implies Q33 (not Q31))
+# (-> Q33 (not Q31))
 
 -Q33 -Q31
 
-# (implies Q33 (not Q32))
+# (-> Q33 (not Q32))
 
 -Q33 -Q32
 
-# (implies Q33 (not Q34))
+# (-> Q33 (not Q34))
 
 -Q33 -Q34
 
-# (implies Q34 (not Q31))
+# (-> Q34 (not Q31))
 
 -Q34 -Q31
 
-# (implies Q34 (not Q32))
+# (-> Q34 (not Q32))
 
 -Q34 -Q32
 
-# (implies Q34 (not Q33))
+# (-> Q34 (not Q33))
 
 -Q34 -Q33
 
-# (implies Q41 (not Q42))
+# (-> Q41 (not Q42))
 
 -Q41 -Q42
 
-# (implies Q41 (not Q43))
+# (-> Q41 (not Q43))
 
 -Q41 -Q43
 
-# (implies Q41 (not Q44))
+# (-> Q41 (not Q44))
 
 -Q41 -Q44
 
-# (implies Q42 (not Q41))
+# (-> Q42 (not Q41))
 
 -Q42 -Q41
 
-# (implies Q42 (not Q43))
+# (-> Q42 (not Q43))
 
 -Q42 -Q43
 
-# (implies Q42 (not Q44))
+# (-> Q42 (not Q44))
 
 -Q42 -Q44
 
-# (implies Q43 (not Q41))
+# (-> Q43 (not Q41))
 
 -Q43 -Q41
 
-# (implies Q43 (not Q42))
+# (-> Q43 (not Q42))
 
 -Q43 -Q42
 
-# (implies Q43 (not Q44))
+# (-> Q43 (not Q44))
 
 -Q43 -Q44
 
-# (implies Q44 (not Q41))
+# (-> Q44 (not Q41))
 
 -Q44 -Q41
 
-# (implies Q44 (not Q42))
+# (-> Q44 (not Q42))
 
 -Q44 -Q42
 
-# (implies Q44 (not Q43))
+# (-> Q44 (not Q43))
 
 -Q44 -Q43
 
-# (implies Q11 (not Q22))
+# (-> Q11 (not Q22))
 
 -Q11 -Q22
 
-# (implies Q11 (not Q33))
+# (-> Q11 (not Q33))
 
 -Q11 -Q33
 
-# (implies Q11 (not Q44))
+# (-> Q11 (not Q44))
 
 -Q11 -Q44
 
-# (implies Q12 (not Q23))
+# (-> Q12 (not Q23))
 
 -Q12 -Q23
 
-# (implies Q12 (not Q34))
+# (-> Q12 (not Q34))
 
 -Q12 -Q34
 
-# (implies Q12 (not Q21))
+# (-> Q12 (not Q21))
 
 -Q12 -Q21
 
-# (implies Q13 (not Q24))
+# (-> Q13 (not Q24))
 
 -Q13 -Q24
 
-# (implies Q13 (not Q22))
+# (-> Q13 (not Q22))
 
 -Q13 -Q22
 
-# (implies Q13 (not Q31))
+# (-> Q13 (not Q31))
 
 -Q13 -Q31
 
-# (implies Q14 (not Q23))
+# (-> Q14 (not Q23))
 
 -Q14 -Q23
 
-# (implies Q14 (not Q32))
+# (-> Q14 (not Q32))
 
 -Q14 -Q32
 
-# (implies Q14 (not Q41))
+# (-> Q14 (not Q41))
 
 -Q14 -Q41
 
-# (implies Q21 (not Q32))
+# (-> Q21 (not Q32))
 
 -Q21 -Q32
 
-# (implies Q21 (not Q43))
+# (-> Q21 (not Q43))
 
 -Q21 -Q43
 
-# (implies Q21 (not Q12))
+# (-> Q21 (not Q12))
 
 -Q21 -Q12
 
-# (implies Q22 (not Q11))
+# (-> Q22 (not Q11))
 
 -Q22 -Q11
 
-# (implies Q22 (not Q33))
+# (-> Q22 (not Q33))
 
 -Q22 -Q33
 
-# (implies Q22 (not Q44))
+# (-> Q22 (not Q44))
 
 -Q22 -Q44
 
-# (implies Q22 (not Q13))
+# (-> Q22 (not Q13))
 
 -Q22 -Q13
 
-# (implies Q22 (not Q31))
+# (-> Q22 (not Q31))
 
 -Q22 -Q31
 
-# (implies Q23 (not Q12))
+# (-> Q23 (not Q12))
 
 -Q23 -Q12
 
-# (implies Q23 (not Q34))
+# (-> Q23 (not Q34))
 
 -Q23 -Q34
 
-# (implies Q23 (not Q14))
+# (-> Q23 (not Q14))
 
 -Q23 -Q14
 
-# (implies Q23 (not Q32))
+# (-> Q23 (not Q32))
 
 -Q23 -Q32
 
-# (implies Q23 (not Q41))
+# (-> Q23 (not Q41))
 
 -Q23 -Q41
 
-# (implies Q24 (not Q13))
+# (-> Q24 (not Q13))
 
 -Q24 -Q13
 
-# (implies Q24 (not Q33))
+# (-> Q24 (not Q33))
 
 -Q24 -Q33
 
-# (implies Q24 (not Q42))
+# (-> Q24 (not Q42))
 
 -Q24 -Q42
 
-# (implies Q31 (not Q42))
+# (-> Q31 (not Q42))
 
 -Q31 -Q42
 
-# (implies Q31 (not Q22))
+# (-> Q31 (not Q22))
 
 -Q31 -Q22
 
-# (implies Q31 (not Q13))
+# (-> Q31 (not Q13))
 
 -Q31 -Q13
 
-# (implies Q32 (not Q21))
+# (-> Q32 (not Q21))
 
 -Q32 -Q21
 
-# (implies Q32 (not Q43))
+# (-> Q32 (not Q43))
 
 -Q32 -Q43
 
-# (implies Q32 (not Q23))
+# (-> Q32 (not Q23))
 
 -Q32 -Q23
 
-# (implies Q32 (not Q14))
+# (-> Q32 (not Q14))
 
 -Q32 -Q14
 
-# (implies Q32 (not Q41))
+# (-> Q32 (not Q41))
 
 -Q32 -Q41
 
-# (implies Q33 (not Q22))
+# (-> Q33 (not Q22))
 
 -Q33 -Q22
 
-# (implies Q33 (not Q11))
+# (-> Q33 (not Q11))
 
 -Q33 -Q11
 
-# (implies Q33 (not Q44))
+# (-> Q33 (not Q44))
 
 -Q33 -Q44
 
-# (implies Q33 (not Q24))
+# (-> Q33 (not Q24))
 
 -Q33 -Q24
 
-# (implies Q33 (not Q42))
+# (-> Q33 (not Q42))
 
 -Q33 -Q42
 
-# (implies Q34 (not Q23))
+# (-> Q34 (not Q23))
 
 -Q34 -Q23
 
-# (implies Q34 (not Q12))
+# (-> Q34 (not Q12))
 
 -Q34 -Q12
 
-# (implies Q34 (not Q43))
+# (-> Q34 (not Q43))
 
 -Q34 -Q43
 
-# (implies Q41 (not Q32))
+# (-> Q41 (not Q32))
 
 -Q41 -Q32
 
-# (implies Q41 (not Q23))
+# (-> Q41 (not Q23))
 
 -Q41 -Q23
 
-# (implies Q41 (not Q14))
+# (-> Q41 (not Q14))
 
 -Q41 -Q14
 
-# (implies Q42 (not Q31))
+# (-> Q42 (not Q31))
 
 -Q42 -Q31
 
-# (implies Q42 (not Q33))
+# (-> Q42 (not Q33))
 
 -Q42 -Q33
 
-# (implies Q42 (not Q24))
+# (-> Q42 (not Q24))
 
 -Q42 -Q24
 
-# (implies Q43 (not Q32))
+# (-> Q43 (not Q32))
 
 -Q43 -Q32
 
-# (implies Q43 (not Q21))
+# (-> Q43 (not Q21))
 
 -Q43 -Q21
 
-# (implies Q43 (not Q34))
+# (-> Q43 (not Q34))
 
 -Q43 -Q34
 
-# (implies Q44 (not Q33))
+# (-> Q44 (not Q33))
 
 -Q44 -Q33
 
-# (implies Q44 (not Q22))
+# (-> Q44 (not Q22))
 
 -Q44 -Q22
 
-# (implies Q44 (not Q11))
+# (-> Q44 (not Q11))
 
 -Q44 -Q11
 
